...

  const emptyProps = getEmptyProps();

  return (
    <>
      <FlatList
        testID="items-list"
        data={data}
        keyExtractor={keyExtractor}
        renderItem={renderItem}
        contentContainerStyle={[
          styles.list,
          data.length === 0 && { flexGrow: 1 },
...
