...

  return (
    <TouchableOpacity
      onPress={onPress}
      hitSlop={8}
      style={style}
      testID="burger-menu-button"
    >
      <View style={[styles.line, { backgroundColor: Colors.textMain }]} />
      <View style={[styles.line, { backgroundColor: Colors.textMain }]} />
      <View style={[styles.line, { backgroundColor: Colors.textMain }]} />
    </TouchableOpacity>
  );
...
