...
    password2: password,
  });
  logEvent(getAnalytics(), "sign_up", { method: "email" });
  return data;
};

export const Logout = async (onLogoutCallback) => {
  try {
    const refresh = await getRefreshToken();
    if (refresh) {
      try {
        await api.post("/api-auth/logout/", { refresh });
      } catch (e) {
...
